# facebook-android-sdk

./: .arcconfig  .buckconfig  .buckversion  .classpath  .gitignore  .project  .travis.yml  Android-SDK-15.txt  Android.txt  AndroidManifest.xml  AsyncFacebookRunner.java  Aung Myo  Build with gradle  CHANGELOG.md  CHANGELOG.mdown  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.mdown  CONTRIBUTING.mdowna  Facebook.apk  FacebookError.java  FbDialog.java  LICENSE.txt  NOTICE.txt  PULL_REQUEST_TEMPLATE  README.md  README.mdown  ReadMe  Readme.md  SECURITY.md  aaaa  blog-devblog-rss.XML  browser-extension.json  build.gradle  build.gradle.kts  cmp-code.txt  coberture.gradle  constants.gradle  dfg  facebook-android-sdk  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.travis/: add_tag.sh  deploy.sh  fetch_version.sh  release.sh
Facebook/: cutmuetia
app/: build.gradle
buildSrc/: build.gradle.kts
example/: .project  AndroidManifest.xml
examples/: pom.xml
facebook/: .classpath  (+15 more)
facebook-applinks/: build.gradle  build.gradle.kts  proguard-rules.pro
facebook-bolts/: build.gradle  build.gradle.kts  proguard-rules.pro
facebook-common/: build.gradle  build.gradle.kts  proguard-rules.pro
facebook-core/: build.gradle  build.gradle.kts  proguard-rules.pro
facebook-core/src/main/cpp/: CMakeLists.txt  model_runtime.cpp  neon_predictor.cpp
facebook-gamingservices/: build.gradle  build.gradle.kts  proguard-rules.pro
facebook-login/: FB  Meta  build.gradle  build.gradle.kts  proguard-rules.pro
facebook-messenger/: build.gradle  build.gradle.kts  proguard-rules.pro
(+3052 files in other folders)
